Fix opaque backdrop in dark mode

--- a/clients/apps/web/src/styles/globals.css
+++ b/clients/apps/web/src/styles/globals.css
@@ -246,6 +246,10 @@
     @apply text-gray-200;
   }
 
+  #polar-embed-layout {
+    color-scheme: normal;
+  }
+
   html:not(.dark) {
     --lightningcss-light: initial;
     --lightningcss-dark: ;
